Fixed image alignment is slider

--- a/SRC/style/style.css
+++ b/SRC/style/style.css
@@ -36,12 +36,7 @@ header {
 	max-height: 115px;
 	display: flex;
 	flex-direction: column;
-	/* row-gap: 10px; */
-	/* top: 0; */
-	/* right: 0; */
 	z-index: 117;
-	/* background: transparent; */
-	/* padding: 28px 50px; */
 	transition: all .50s ease;
 	background-color: var(--main-color);
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -166,17 +161,14 @@ main {
 	padding: 0px 20px;
 	margin-top: 115px;
 	padding-top: 50px;
-	/* overflow: hidden; */
 }
 
 
 .image-slider-container {
 	position: relative;
 	width: 100%;
-	/* height: 100%; */
 	border-radius: 20px;
 	overflow: hidden;
-	/* border: 2px solid #ccc; */
 }
 
 .image-slider-container .slider {
@@ -188,15 +180,31 @@ main {
 	width: 100%;
 	height: 500px;
 	flex: 0 0 auto;
+	background-size: cover;
+	background-position: center;
 }
 
-.image-slider-container img {
+.image-slider-container .slide.one {
+	background-image: url('https://picsum.photos/1000/1000');
+}
+
+.image-slider-container .slide.two {
+	background-image: url('https://picsum.photos/1000/1001');
+}
+
+.image-slider-container .slide.three {
+	background-image: url('https://picsum.photos/1001/1000');
+}
+
+.image-slider-container .slide.four {
+	background-image: url('https://picsum.photos/1000/1002');
+}
+
+/* .image-slider-container img {
 	display: block;
 	width: 100%;
 	height: auto;
-	/* height: 500px; */
-	/* border-radius: 20px; */
-}
+} */
 
 .image-slider-container .prev,
 .image-slider-container .next {
@@ -225,7 +233,7 @@ main {
 }
 
 .image-slider-container .prev:hover,
-.image-slider-container .next:hover{
+.image-slider-container .next:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 	/* transform: scale(1.1); */
 }
